# thesis

./: .gitignore  NAMESPACE
.github/workflows/: move-files-for-package-build.yml
bisam-v2/: CMakeLists.txt  DESCRIPTION  b_ism.h  controlled-simulation.h  main.cpp  model-selection-strategy.h  mombf-bridge.h  section_header.py
bisam-v2/lib/lasso/: .gitignore
bisam-v2/mombf/mombf/R/: modelSelection.R
bisam-v2/mombf/mombf/src/: modelSel_regression.cpp
bisam-v2/r/: contr_sim_breaks_fun.R  sim_toy_example.R
bisam-v2/r-testing-files/: r.Rproj  test-package.R
bisam-v2/src/: RcppExports.cpp  b_ism.h  mombf-bridge.h
code/: CMakeLists.txt  isserlis_theorem.h  main.cpp  monte_carlo.h  onion.h  onion_fixed.h  onion_monte_carlo.h  timer.h
src/: bisam_rcpp.cpp
